// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stringifyConfig > shold meta generate correctly 1`] = `
"
<meta name=\\"description\\" content=\\"This is basic meta\\">
<meta name=\\"bar\\" content=\\"bar\\">
<meta name=\\"foo\\" content=\\"foo\\">"
`;

exports[`stringifyConfig > shold meta generate correctly 2`] = `
"
<meta name=\\"description\\" content=\\"This is about page\\">
<meta name=\\"bar\\" content=\\"bar\\">
<meta name=\\"foo\\" content=\\"foo\\">"
`;

exports[`stringifyConfig > should stringify builder config correctly 1`] = `
"{
  tools: {
    webpackChain(chain) {
      chain.devtool(\\"eval\\");
    }
  }
}"
`;

exports[`stringifyConfig > should stringify webpack config correctly 1`] = `
"{
  mode: 'development',
  plugins: [
    {
      definitions: {
        foo: 'bar'
      }
    }
  ]
}"
`;

exports[`stringifyConfig > should stringify webpack config with verbose option correctly 1`] = `
"{
  mode: 'development',
  plugins: [
    {
      definitions: {
        foo: 'bar',
        baz() {
          const a = 1;
          return a;
        }
      }
    }
  ]
}"
`;
